--- a/test.ipynb
+++ b/test.ipynb
@@ -84,31 +84,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.modules.flow.nested_flow import NestedAffineCoupling, InvertibleModuleWrapper, AffineCoupling, InvertibleSequential\n",
+    "from src.modules.flow.nested_flow import NestedAffineCoupling, InvertibleModuleWrapper, AffineCoupling, InvertibleSequential, InvConv2dLU\n",
     "\n",
-    "mod = InvertibleModuleWrapper(NestedAffineCoupling(4, 3, level=2, max_stack_level= 2, enforce_channel_on_base= True), disable= True)"
+    "mod = InvertibleModuleWrapper(NestedAffineCoupling(4, 3, level=1, max_stack_level= 2, enforce_channel_on_base= True), disable= True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.4910, grad_fn=<MeanBackward0>)"
+       "tensor(2.1853e-05, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch\n",
-    "x = torch.rand(1,4,32,32)\n",
-    "cond = torch.rand(1,3,32,32)\n",
+    "x = torch.rand(1,16,32,32)\n",
+    "conv_ = InvertibleSequential(AffineCoupling(16), InvConv2dLU(16))\n",
+    "((conv_.inverse(conv_(x)) - x).abs()).mean()\n",
+    "# mod(x, cond).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top_flow1_1 tensor(1.7837, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(1.6577, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.3809, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.3141, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(2.6554, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(1.7385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.1385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(1.8054, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(1.7540, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(2.1772, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.0452, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(1.9934, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(1.9934, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.0452, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(2.1772, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(1.7540, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(1.8054, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.1385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(1.7385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(2.6554, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.3141, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow2_1 tensor(2.3809, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(1.6577, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
+      "top_flow1_1 tensor(1.7837, dtype=torch.float64, grad_fn=<MeanBackward0>)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.7314e-07, dtype=torch.float64, grad_fn=<MeanBackward0>)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "x = torch.rand(1,4,32,32).double()\n",
+    "cond = torch.rand(1,3,32,32).double()\n",
+    "# Still not invertible with max_stack_level != 1. The problem seem to be coming from the numerical error? Still need to investigate more as using double the error still grow exponentially.\n",
+    "mod = InvertibleModuleWrapper(NestedAffineCoupling(4, 3, level=1, max_stack_level= 3, enforce_channel_on_base= True), disable= True).double()\n",
     "# ((mod.inverse(mod(x, cond), cond) - x).abs() < 1e-7).all()\n",
     "((mod.inverse(mod(x, cond), cond) - x).abs()).mean()\n",
     "# mod(x, cond).shape"
@@ -116,16 +172,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in reversed(range(3)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0., grad_fn=<MeanBackward0>)"
+       "tensor(86.3797, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,66 +220,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "5\n",
+      "top_flow1_1_flow1_1 tensor(2.0468, device='cuda:0')\n",
+      "top_flow1_1_flow1_1 tensor(2.0029, device='cuda:0')\n",
+      "top_flow1_1_flow2_1 tensor(1.9933, device='cuda:0')\n",
+      "top_flow1_1_flow2_1 tensor(2.0398, device='cuda:0')\n",
+      "top_flow2_1_flow1_1 tensor(1.9538, device='cuda:0')\n",
+      "top_flow2_1_flow1_1 tensor(2.0370, device='cuda:0')\n",
+      "top_flow2_1_flow2_1 tensor(2.0396, device='cuda:0')\n",
+      "top_flow2_1_flow2_1 tensor(1.9727, device='cuda:0')\n",
+      "top_flow1_2 tensor(2.0550, device='cuda:0')\n",
+      "top_flow1_2 tensor(1.8788, device='cuda:0')\n",
+      "top_flow2_2 tensor(2.0127, device='cuda:0')\n",
+      "top_flow2_2 tensor(1.9522, device='cuda:0')\n",
+      "top_flow1_2 tensor(2.0796, device='cuda:0')\n",
+      "top_flow1_2 tensor(1.9523, device='cuda:0')\n",
+      "top_flow2_2 tensor(2.0819, device='cuda:0')\n",
+      "top_flow2_2 tensor(2.0064, device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "===================================================================================================================\n",
-       "Layer (type:depth-idx)                                            Output Shape              Param #\n",
-       "===================================================================================================================\n",
-       "InvertibleModuleWrapper                                           [1, 64, 128, 128]         --\n",
-       "├─NestedAffineCoupling: 1-1                                       [1, 64, 128, 128]         --\n",
-       "│    └─ModuleList: 2-11                                           --                        (recursive)\n",
-       "│    │    └─ConditionalModule: 3-1                                [1, 32, 128, 128]         2,368\n",
-       "│    └─ModuleList: 2-10                                           --                        (recursive)\n",
-       "│    │    └─NestedAffineCoupling: 3-2                             [1, 32, 128, 128]         332,672\n",
-       "│    └─ModuleList: 2-11                                           --                        (recursive)\n",
-       "│    │    └─ConditionalModule: 3-3                                [1, 32, 128, 128]         (recursive)\n",
-       "│    └─ModuleList: 2-12                                           --                        (recursive)\n",
-       "│    │    └─NestedAffineCoupling: 3-4                             [1, 32, 128, 128]         332,672\n",
-       "│    └─ModuleList: 2-11                                           --                        (recursive)\n",
-       "│    │    └─ConditionalModule: 3-5                                [1, 32, 128, 128]         2,368\n",
-       "│    └─ModuleList: 2-10                                           --                        (recursive)\n",
-       "│    │    └─NestedAffineCoupling: 3-6                             [1, 32, 128, 128]         40,512\n",
-       "│    └─ModuleList: 2-11                                           --                        (recursive)\n",
-       "│    │    └─ConditionalModule: 3-7                                [1, 32, 128, 128]         (recursive)\n",
-       "│    └─ModuleList: 2-12                                           --                        (recursive)\n",
-       "│    │    └─NestedAffineCoupling: 3-8                             [1, 32, 128, 128]         40,512\n",
-       "│    └─ModuleList: 2-11                                           --                        (recursive)\n",
-       "│    │    └─ConditionalModule: 3-9                                [1, 32, 128, 128]         2,368\n",
-       "│    └─ModuleList: 2-10                                           --                        (recursive)\n",
-       "│    │    └─NestedAffineCoupling: 3-10                            [1, 32, 128, 128]         40,512\n",
-       "│    └─ModuleList: 2-11                                           --                        (recursive)\n",
-       "│    │    └─ConditionalModule: 3-11                               [1, 32, 128, 128]         (recursive)\n",
-       "│    └─ModuleList: 2-12                                           --                        (recursive)\n",
-       "│    │    └─NestedAffineCoupling: 3-12                            [1, 32, 128, 128]         40,512\n",
-       "│    └─InvertibleSequential: 2-13                                 [1, 64, 128, 128]         --\n",
-       "│    │    └─InvConv2d: 3-13                                       [1, 64, 128, 128]         4,096\n",
-       "│    │    └─InvertibleLeakyReLU: 3-14                             [1, 64, 128, 128]         --\n",
-       "│    │    └─InvConv2d: 3-15                                       [1, 64, 128, 128]         4,096\n",
-       "===================================================================================================================\n",
-       "Total params: 842,688\n",
-       "Trainable params: 842,688\n",
+       "========================================================================================================================\n",
+       "Layer (type:depth-idx)                                                 Output Shape              Param #\n",
+       "========================================================================================================================\n",
+       "InvertibleModuleWrapper                                                [1, 64, 128, 128]         --\n",
+       "├─NestedAffineCoupling: 1-1                                            [1, 64, 128, 128]         --\n",
+       "│    └─ModuleList: 2-13                                                --                        (recursive)\n",
+       "│    │    └─ConditionalModule: 3-1                                     [1, 32, 128, 128]         2,368\n",
+       "│    └─ModuleList: 2-12                                                --                        (recursive)\n",
+       "│    │    └─NestedAffineCoupling: 3-2                                  [1, 32, 128, 128]         314,240\n",
+       "│    └─ModuleList: 2-13                                                --                        (recursive)\n",
+       "│    │    └─ConditionalModule: 3-3                                     [1, 32, 128, 128]         (recursive)\n",
+       "│    └─ModuleList: 2-14                                                --                        (recursive)\n",
+       "│    │    └─NestedAffineCoupling: 3-4                                  [1, 32, 128, 128]         314,240\n",
+       "│    └─ModuleList: 2-15                                                --                        --\n",
+       "│    │    └─InvertibleSequential: 3-5                                  [1, 64, 128, 128]         --\n",
+       "│    └─ModuleList: 2-13                                                --                        (recursive)\n",
+       "│    │    └─ConditionalModule: 3-6                                     [1, 32, 128, 128]         2,368\n",
+       "│    └─ModuleList: 2-12                                                --                        (recursive)\n",
+       "│    │    └─NestedAffineCoupling: 3-7                                  [1, 32, 128, 128]         38,464\n",
+       "│    └─ModuleList: 2-13                                                --                        (recursive)\n",
+       "│    │    └─ConditionalModule: 3-8                                     [1, 32, 128, 128]         (recursive)\n",
+       "│    └─ModuleList: 2-14                                                --                        (recursive)\n",
+       "│    │    └─NestedAffineCoupling: 3-9                                  [1, 32, 128, 128]         38,464\n",
+       "│    └─ModuleList: 2-15                                                --                        --\n",
+       "│    │    └─InvertibleSequential: 3-10                                 [1, 64, 128, 128]         --\n",
+       "│    └─ModuleList: 2-13                                                --                        (recursive)\n",
+       "│    │    └─ConditionalModule: 3-11                                    [1, 32, 128, 128]         2,368\n",
+       "│    └─ModuleList: 2-12                                                --                        (recursive)\n",
+       "│    │    └─NestedAffineCoupling: 3-12                                 [1, 32, 128, 128]         38,464\n",
+       "│    └─ModuleList: 2-13                                                --                        (recursive)\n",
+       "│    │    └─ConditionalModule: 3-13                                    [1, 32, 128, 128]         (recursive)\n",
+       "│    └─ModuleList: 2-14                                                --                        (recursive)\n",
+       "│    │    └─NestedAffineCoupling: 3-14                                 [1, 32, 128, 128]         38,464\n",
+       "│    └─ModuleList: 2-15                                                --                        --\n",
+       "│    │    └─InvertibleSequential: 3-15                                 [1, 64, 128, 128]         --\n",
+       "========================================================================================================================\n",
+       "Total params: 789,440\n",
+       "Trainable params: 789,440\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (Units.GIGABYTES): 5.85\n",
-       "===================================================================================================================\n",
+       "Total mult-adds (Units.GIGABYTES): 5.38\n",
+       "========================================================================================================================\n",
        "Input size (MB): 6.29\n",
-       "Forward/backward pass size (MB): 276.82\n",
-       "Params size (MB): 3.37\n",
-       "Estimated Total Size (MB): 286.49\n",
-       "==================================================================================================================="
+       "Forward/backward pass size (MB): 192.94\n",
+       "Params size (MB): 3.16\n",
+       "Estimated Total Size (MB): 202.39\n",
+       "========================================================================================================================"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,22 +331,20 @@
        "│    │    └─AffineCoupling: 3-3                         --                        75,904\n",
        "│    └─InvertibleModuleWrapper: 2-4                     [1, 64, 128, 128]         --\n",
        "│    │    └─AffineCoupling: 3-4                         --                        303,360\n",
-       "│    └─InvertibleModuleWrapper: 2-5                     [1, 64, 128, 128]         --\n",
-       "│    │    └─AffineCoupling: 3-5                         --                        75,904\n",
        "=========================================================================================================\n",
-       "Total params: 834,432\n",
-       "Trainable params: 834,432\n",
+       "Total params: 758,528\n",
+       "Trainable params: 758,528\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (Units.GIGABYTES): 13.67\n",
+       "Total mult-adds (Units.GIGABYTES): 12.43\n",
        "=========================================================================================================\n",
        "Input size (MB): 0.00\n",
-       "Forward/backward pass size (MB): 293.60\n",
-       "Params size (MB): 3.34\n",
-       "Estimated Total Size (MB): 296.94\n",
+       "Forward/backward pass size (MB): 251.66\n",
+       "Params size (MB): 3.03\n",
+       "Estimated Total Size (MB): 254.69\n",
        "========================================================================================================="
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +355,7 @@
     "                            InvertibleModuleWrapper(AffineCoupling(in_channels=64, masking_type= 'spatial')),\n",
     "                            InvertibleModuleWrapper(AffineCoupling(in_channels=64, masking_type= 'channel')),\n",
     "                            InvertibleModuleWrapper(AffineCoupling(in_channels=64, masking_type= 'spatial')),\n",
-    "                            InvertibleModuleWrapper(AffineCoupling(in_channels=64, masking_type= 'channel')),\n",
+    "                            # InvertibleModuleWrapper(AffineCoupling(in_channels=64, masking_type= 'channel')),\n",
     "                            # InvertibleModuleWrapper(AffineCoupling(in_channels=64, masking_type= 'spatial')),\n",
     "                            ))\n",
     "summary(mod2,[(1,64,128,128)], depth= 3)"
@@ -298,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -306,8 +398,8 @@
      "output_type": "stream",
      "text": [
       "Training 1 model took 0.08s\n",
-      "Training 5 model took 0.29s\n",
-      "Training 15 model took 0.87s\n"
+      "Training 5 model took 0.30s\n",
+      "Training 15 model took 0.91s\n"
      ]
     }
    ],
@@ -384,12 +476,12 @@
     "\n",
     "    print(f\"Training {num_networks} model took {time.perf_counter() - training_start:.2f}s\")\n",
     "\n",
+    "if __name__ == \"__main__\":\n",
+    "    train(1, 20, 1000)\n",
     "\n",
-    "train(1, 20, 1000)\n",
+    "    train(5, 20, 1000)\n",
     "\n",
-    "train(5, 20, 1000)\n",
-    "\n",
-    "train(15, 20, 1000)\n"
+    "    train(15, 20, 1000)\n"
    ]
   }
  ],
