Add another version to test for numerical error

--- a/test.ipynb
+++ b/test.ipynb
@@ -59,9 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 96, 32, 32])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from src.modules.deform_conv import DeformConv2d, SeparableDeformConv2d\n",
     "import torch \n",
@@ -85,22 +96,24 @@
    "outputs": [],
    "source": [
     "from src.modules.flow.nested_flow import NestedAffineCoupling, InvertibleModuleWrapper, AffineCoupling, InvertibleSequential, InvConv2dLU\n",
+    "import torch \n",
+    "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "mod = InvertibleModuleWrapper(NestedAffineCoupling(4, 3, level=1, max_stack_level= 2, enforce_channel_on_base= True), disable= True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2.1853e-05, grad_fn=<MeanBackward0>)"
+       "tensor(344.1268, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,86 +121,42 @@
    "source": [
     "import torch\n",
     "x = torch.rand(1,16,32,32)\n",
-    "conv_ = InvertibleSequential(AffineCoupling(16), InvConv2dLU(16))\n",
+    "conv_ = InvertibleSequential(AffineCoupling(16), #InvConv2dLU(16),\n",
+    "                             AffineCoupling(16), #InvConv2dLU(16),\n",
+    "                             AffineCoupling(16), #InvConv2dLU(16),\n",
+    "                             AffineCoupling(16), #InvConv2dLU(16),\n",
+    "                             AffineCoupling(16), #InvConv2dLU(16),\n",
+    "                             AffineCoupling(16), #InvConv2dLU(16),\n",
+    "                             )\n",
     "((conv_.inverse(conv_(x)) - x).abs()).mean()\n",
     "# mod(x, cond).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "top_flow1_1 tensor(1.7837, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(1.6577, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.3809, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.3141, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(2.6554, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(1.7385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.1385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(1.8054, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(1.7540, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(2.1772, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.0452, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(1.9934, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(1.9934, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.0452, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(2.1772, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(1.7540, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(1.8054, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.1385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(1.7385, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(2.6554, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.3141, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow2_1 tensor(2.3809, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(1.6577, dtype=torch.float64, grad_fn=<MeanBackward0>)\n",
-      "top_flow1_1 tensor(1.7837, dtype=torch.float64, grad_fn=<MeanBackward0>)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor(1.7314e-07, dtype=torch.float64, grad_fn=<MeanBackward0>)"
+       "tensor(0., device='cuda:0', grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch\n",
-    "x = torch.rand(1,4,32,32).double()\n",
-    "cond = torch.rand(1,3,32,32).double()\n",
+    "x = torch.rand(1,4,32,32).cuda().float()\n",
+    "cond = torch.rand(1,3,32,32).cuda().float()\n",
     "# Still not invertible with max_stack_level != 1. The problem seem to be coming from the numerical error? Still need to investigate more as using double the error still grow exponentially.\n",
-    "mod = InvertibleModuleWrapper(NestedAffineCoupling(4, 3, level=1, max_stack_level= 3, enforce_channel_on_base= True), disable= True).double()\n",
+    "mod = InvertibleModuleWrapper(NestedAffineCoupling(4, 3, level=2, max_stack_level= 2, enforce_channel_on_base= True), disable= True).cuda().float()\n",
     "# ((mod.inverse(mod(x, cond), cond) - x).abs() < 1e-7).all()\n",
-    "((mod.inverse(mod(x, cond), cond) - x).abs()).mean()\n",
+    "((mod.inverse(mod(x)) - x).abs()).mean()\n",
     "# mod(x, cond).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in reversed(range(3)):\n",
-    "    print(i)"
    ]
   },
   {
